    Due to a systemd issue[1], using link files to rename interfaces
    doesn't work as expected. Link files will not rename an interface
    if it was already renamed, and interfaces are renamed in initrd, so
    set-name will often not work as expected when rebooting. However,
    rules files will cause a renaming, even if the interface has been
    renamed in initrd.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Mon, 04 Jun 2018 18:54:44 -0400

netplan.io (0.36.2) bionic; urgency=medium

  * doc/netplan.md: Clarify the behavior for time-based values for bonds
    and bridges. (LP: #1756587)
  * critical: provide a way to set "CriticalConnection=true" on a networkd
    connection, especially for remote-fs scenarios. (LP: #1769682)

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Tue, 08 May 2018 15:33:48 -0400

netplan.io (0.36.1) bionic; urgency=medium

  * tests/integration.py: Do a better cleanup for bridge-based tests; should
    fix instability with test_mix_bridge_on_bond.
  * tests/integration.py: Adjust autopkgtests to account for default behavior
    change for up/down delay, arp interval, mii interval introduced in the
    last upload.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Mon, 23 Apr 2018 17:03:11 -0400

netplan.io (0.36) bionic; urgency=medium

  * 'netplan try': properly reset terminal flags at the end of the command,
    so that terminal behaves the same after as before it was run.
    (LP: #1766283)
  * Fix default behavior for unspecified time values in bond parameters: if
    no time-value suffix such as 'ms' is added, consider the value to be in
    milliseconds for MII monitor interval, up/down delay and ARP interval
    so users can have the expected additional granularity when setting up
    these parameters. (LP: #1765833)

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Mon, 23 Apr 2018 11:38:56 -0400

netplan.io (0.35) bionic; urgency=medium
