@@ -7,6 +7,7 @@ netplan.io (0.36.3) UNRELEASED; urgency=medium
     set-name will often not work as expected when rebooting. However,
     rules files will cause a renaming, even if the interface has been
     renamed in initrd.
+  * tests/integration.py: fix test_eth_and_bridge autopkg test harder.
 
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Mon, 04 Jun 2018 18:54:44 -0400
 
